feat(ai-tools): 添加并注册多种文件操作工具，支持文件读写删改及目录读取
- 新增 BaseTool 抽象类，定义工具基本接口与结果生成模板
- 实现 FileWriteTool，支持写入文件并校验写入结果
- 实现 FileReadTool，支持读取指定文件内容并格式化输出
- 实现 FileDeleteTool，支持删除文件并防止重要文件误删除
- 实现 FileModifyTool，支持文件内容替换，含重复匹配保护
- 实现 FileDirReadTool，支持读取目录结构并过滤无关文件
- 添加 ToolManager 组件统一管理所有工具，提供按名称获取接口
- AiCodeGeneratorServiceFactory 改用 ToolManager 批量注入工具
- 优化工具运行结果的格式化显示，包含状态图标和详情展开块